@@ -1,46 +1,134 @@
-#  An Internet Media Store
-<p align="center">
-  <img src="assets/images/aims_cover_image.png" />
-</p>
+# TKXDPM.VN.20231-15
 
-## Getting Started
+## Team member
 
-Welcome to the AIMS project. Here is a guideline to help you get started.
-
-## Folder Structure
-
-The workspace contains the following folders, where:
-
-- `src`: the folder to maintain sources
-- `lib`: the folder to maintain dependencies
-- `assets`: the folder to maintain static resources
-- `test`: the folder for testing purpose
-
-## Dependency Management
-### Working with Eclipse
-Import the root directory of this repository after cloning under `Eclipse` -> `Open Projects from File System...` or by using EGit.
-
-### SQLite
-Import `sqlite-jdbc-3.7.2.jar` in `lib` under `Eclipse` -> `Project` -> `Properties` -> `Java Build Path` -> `Classpath` -> `Add JARs...`.
+| Name              | Role        |
+| :-----------------| :---------- |
+| Nguyễn Văn Mạnh   | Team Leader |
+| Trần Văn Mạnh     | Member      |
+| Đàm Thị Phương Mai| Member      |
+| Nguyễn Đức Minh   | Member      |
 
 
-### JUnit
-Import `JUnit5` library under `Eclipse` -> `Project` -> `Properties` -> `Java Build Path` -> `Modulepath` -> `Add Library...` -> `JUnit` -> `Next`.
+## Report Content
 
-### JavaFX
-**Note:** At first, please try to run the project once, and then follow these steps.
-1. Create a new `User Library` under `Eclipse` -> `Window` -> `Preferences` -> `Java` -> `Build Path` -> `User Libraries` -> `New`
-2. Name it anything you want, e.g., `JavaFX15`, and include the ***jars*** under either the `lib/linux/javafx-sdk-15` directory for Linux distro or the `lib/win/javafx-sdk-15` directory for Windows in the project.
-3. Include the library, e.g., `JavaFX15`, into the classpath.
+<details>
+  <summary>From 27/11/2023 ~ to 3/12/2023 </summary>
+<br>
+<details>
+<summary>Team Member 1: Nguyễn Văn Mạnh</summary>
+<br>
 
-### Add VM arguments
-Click on `Run` -> `Run Configurations...`  -> `Java Application`, create a new launch configuration for your project and add these VM arguments:
-- For Linux distro: 
-> `--module-path lib/linux/javafx-sdk-15 --add-modules javafx.controls,javafx.fxml`
-- For Windows:
-> `--module-path lib/win/javafx-sdk-15 --add-modules javafx.controls,javafx.fxml`
+- Assigned tasks:
+  - Find high coulping in all classes related to ordering functionality
 
-## Author
-- nguyenlm - Software Engeneering Student - k61
-- manhvd   - Software Engeneering Student - k61
-- hieudm   - ICT - k61
+- Implementation details:
+  - Pull Request(s): https://github.com/LManhL/TKXDPM.KHMT.20231-15/pull/1
+  - Specific task details:
+    - Read through the entire class related to ordering functionality to find high coupling
+  
+</details>
+
+<details>
+<summary>Team Member 2: Trần Văn Mạnh</summary>
+<br>
+
+- Assigned tasks: find coupling in:
+  - BaseController, HomeController, 
+  - entity/cart/... , entity/media/..., 
+
+- Implementation details:
+  - Pull Request(s): https://github.com/LManhL/TKXDPM.KHMT.20231-15/pull/2
+  - Specific task details:
+    - BaseController and Cart are data coupled because in BaseController.checkMediaInCart(), BaseController and Cart share 'media' data.
+</details>
+
+<details>
+<summary>Team Member 3: Đàm Thị Phương Mai</summary>
+<br>
+
+- Assigned tasks: find coupling in class related to payment
+
+- Implementation details:
+  - Pull Request(s): https://github.com/LManhL/TKXDPM.KHMT.20231-15/pull/9
+  - Specific implementation details:
+    - Read through the entire class related to ordering functionality to find high coupling
+</details>
+
+<details>
+<summary>Team Member 4: Nguyễn Đức Minh</summary>
+<br>
+
+- Assigned tasks:
+
+  - Task 1: Comment coupling code in the checkout subsystem (interbank).
+
+- Implementation details:
+  - Pull Request(s): https://github.com/LManhL/TKXDPM.KHMT.20231-15/pull/3
+  - Specific implementation details:
+    - Read through the entire class related to ordering functionality to find high coupling
+</details>
+</details>
+
+
+
+
+
+<details>
+  <summary>From 04/12/2023 ~ to 10/12/2023 </summary>
+<br>
+<details>
+<summary>Team Member 1: Nguyễn Văn Mạnh</summary>
+<br>
+
+- Assigned tasks:
+- Implementation details:
+  - Pull Request(s): 
+    - https://github.com/LManhL/TKXDPM.KHMT.20231-15/pull/5
+  - Specific task details:
+  
+</details>
+
+<details>
+<summary>Team Member 2: Trần Văn Mạnh</summary>
+<br>
+
+- Assigned tasks: 
+- Implementation details:
+  - Pull Request(s): 
+      - https://github.com/LManhL/TKXDPM.KHMT.20231-15/pull/6
+  - Specific task details:
+</details>
+
+<details>
+<summary>Team Member 3: Đàm Thị Phương Mai</summary>
+<br>
+
+- Assigned tasks: 
+- Implementation details:
+  - Pull Request(s):
+    - https://github.com/LManhL/TKXDPM.KHMT.20231-15/pull/8
+  - Specific task details:
+</details>
+
+<details>
+<summary>Team Member 4: Nguyễn Đức Minh</summary>
+<br>
+
+- Assigned tasks:
+- Implementation details:
+  - Pull Request(s):
+    - https://github.com/LManhL/TKXDPM.KHMT.20231-15/pull/7
+  - Specific task details:
+</details>
+</details>
+
+
+
+
+
+
+
+---
+
+
